[package]
name = "methalox_end_game"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.51", features = ["tcp", "noise", "yamux", "gossipsub", "tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bincode = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
schnorrkel = "0.9"
rand = "0.8"
jsonrpsee = { version = "0.16", features = ["server"] }
